# MultiCameraMakerTracking

./: .gitignore  PLAN_MULTI_CAMERA.md  PROJECT_REQUIREMENT  README.md  main.py  requirements.txt
calibration/: calibration_result.json
config/: calibration_result.json
docs/: BRANCH_DOCUMENTATION.md  CLIENT_DEVICE_SETUP.md  NETWORK_STREAMING.md  ROBOT_NAVIGATION_PROMPT.md  SPRINT_DEMO_SUMMARY.md  TECHNICAL_PRESENTATION.md
ros2_ws/: frames_2025-12-20_14.06.07.gv
ros2_ws/src/multi_camera_robot_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src/multi_camera_robot_nav/config/: nav2_params.yaml  navigation.rviz
ros2_ws/src/multi_camera_robot_nav/launch/: full_system.launch.py  gazebo_simulation.launch.py  gz_simulation.launch.py  mapping.launch.py  marker_tracking.launch.py  navigation.launch.py  simulation.launch.py  visualization.launch.py
ros2_ws/src/multi_camera_robot_nav/models/marker_robot/: model.config  model.sdf
ros2_ws/src/multi_camera_robot_nav/multi_camera_robot_nav/: occupancy_grid_mapper_node.py  point_cloud_stitcher_node.py  simulation_bridge_node.py  tf_broadcaster_node.py
ros2_ws/src/multi_camera_robot_nav/urdf/: robot.urdf
ros2_ws/src/multi_camera_robot_nav/worlds/: tracking_room.sdf  tracking_room.world
scripts/: generate_markers.py  run_camera_preview.py  run_full_system.py  run_multi_camera_tracker.py  run_network_tracker.py  run_network_tracker_with_visualization.py  run_orbbec_tracker.py  run_video_tracker.py  run_video_with_visualization.py  start_multi_camera_demo.py  stream_client_standalone.py
src/: __init__.py
(+84 files in other folders)
